fix jumping navigation

--- a/trouva-design-system/css/main.css
+++ b/trouva-design-system/css/main.css
@@ -115,6 +115,7 @@ nav div,
 	margin-right: 16px;
 	padding-bottom: 3px;
 	margin-bottom: 16px;
+	border-bottom: 1px solid transparent;
 }
 nav div a{
 	color: var(--white);
